import logic for setting images at correct size for screen sizes and add basic styling to images for visibility

--- a/src/Components/CartItems/CartItems.scss
+++ b/src/Components/CartItems/CartItems.scss
@@ -1,2 +1,8 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
+
+.cart__image-container {
+  width: 100px;
+  height: 100px;
+  background-size: cover;
+}
